# call_center

./: .gitignore  .ts_queue.hpp.swp  CMakeLists.txt  README.md  abonent.cpp  call_center.cpp  call_center.hpp  configure.cpp  configure.hpp  configure.json  current_calls.cpp  current_calls.hpp  journal.txt  listener.cpp  listener.hpp  log.txt  logger.cpp  logger.hpp  main.cpp  notify_interface.cpp  notify_interface.hpp  session.cpp  session.hpp  ts_queue.hpp
lib/include/: abonent.hpp  call_center.hpp  configure.hpp  current_calls.hpp  listener.hpp  logger.hpp  notify_interface.hpp  session.hpp  ts_queue.hpp
lib/src/: CMakeLists.txt  abonent.cpp  call_center.cpp  configure.cpp  current_calls.cpp  listener.cpp  session.cpp  tests_ts_queue.cpp
main/src/: CMakeLists.txt  ab.cpp  cc.cpp  main.cpp
tests/: CMakeLists.txt  test_configure.json  tests_current_calls.cpp  tests_functional.cpp  tests_ts_queue.cpp
